--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "colon:names": "colon-names",
     "e2e": "cypress run",
     "e2e:chrome": "cypress run --browser chrome",
-    "e2e:record": "cypress run --record",
-    "e2e:record:edge": "cypress run --record --browser edge",
-    "e2e:record:parallel": "cypress run --record --parallel",
+    "e2e:record": "cypress run --record --key e175be24-f1e0-41d7-84b3-9798b2273f26",
+    "e2e:record:edge": "cypress run --record --key e175be24-f1e0-41d7-84b3-9798b2273f26 --browser edge",
+    "e2e:record:parallel": "cypress run --record --key e175be24-f1e0-41d7-84b3-9798b2273f26 --parallel",
     "test:ci": "run-p --race start:ci e2e",
     "test:ci:chrome": "run-p --race start:ci e2e:chrome",
     "test:ci:record": "run-p --race start:ci e2e:record",
